Sat Apr 23 09:03:35 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c: cygwin does not use w32_cmdvector, command line can be
	  other than UTF-8.  [ruby-dev:49519] [Bug #12184]

Sat Apr 23 01:00:03 2016  Rei Odaira  <Rei.Odaira@gmail.com>

	* configure.in: don't use the system-provided round(3) on AIX.
	  In AIX, round(0.49999999999999994) returns 1.0.
	  Use round() in numeric.c instead.

Fri Apr 22 21:00:44 2016  Tanaka Akira  <akr@fsij.org>

	* test/ruby/test_time_tz.rb: Tests depends on Europe/Moscow removed
	  to avoid test failures due to the tzdata change.
	  https://github.com/eggert/tz/commit/8ee11a301cf173afb0c76e0315b9f9ec8ebb9d95
	  Found by naruse.

Fri Apr 22 20:18:40 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* include/ruby/ruby.h (rb_mul_size_overflow): added to handle
	  mul overflow efficiently.

	* include/ruby/ruby.h (rb_alloc_tmp_buffer2): use rb_mul_size_overflow
	  and avoid division where it can define DSIZE_T.

	* gc.c (xmalloc2_size): moved from ruby.h and use rb_mul_size_overflow.

Fri Apr 22 20:34:04 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* time.c (time_asctime): [DOC] add ctime example, not only
	  asctime.  [ruby-core:75126] [Bug #12310]

Fri Apr 22 18:44:32 2016  NARUSE, Yui  <naruse@ruby-lang.org>

	* variable.c: use uint32_t instead of long to avoid confusion about
	  the type of ivtbl->numiv.

Fri Apr 22 15:09:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval_jump.c (exec_end_procs_chain): restore previous error info
	  for each end procs.  [ruby-core:75038] [Bug #12302]

Fri Apr 22 15:04:56 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/redmine-backporter.rb: the fullpath of merger.rb is too long to
	  copy&paste on Windows.  show shorter name instead on the platform.
	  I'm sure that the user of this command on Windows is only me.

Fri Apr 22 14:52:04 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/merger.rb: remove temporary file.

Fri Apr 22 11:27:03 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>
